force-app/main/default/objects/Cluster__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diretor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DirectorClusters</relationshipName>
    <type>Lookup</type>
</CustomField>