force-app/main/default/objects/Cluster__c/fields/FinancialAdministrativeManager__c.field-meta.xml
<CustomField>
    <fullName>FinancialAdministrativeManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente Financeiro Administrativo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FinancialAdministrativeClusters</relationshipName>
    <type>Lookup</type>
</CustomField>