force-app/main/default/objects/Cluster__c/fields/MarketingManager__c.field-meta.xml
<CustomField>
    <fullName>MarketingManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente Marketing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MarketingClusters</relationshipName>
    <type>Lookup</type>
</CustomField>